resources/styles/contact.css
@import url("https://fonts.googleapis.com/css2?family=Alkalami&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Kanit&display=swap");
@import url("https://fonts.googleapis.com/css?family=Open+Sans");
@import url("https://fonts.googleapis.com/css2?family=Nabla&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Sigmar&display=swap");

@font-face {
  font-family: "Digital-7";
  src: url("https://hollywoodokc.github.io/portfolio-site/resources/fonts/digital-7.ttf");
  font-weight: normal;
  font-style: normal;
}

body {
  margin: 0;
  background-color: hsl(206, 66%, 49%);
}

#name {
  font-family: "Nabla", cursive;
}

.topnav {
  overflow: hidden;
  background-color: hsl(210.7, 42.9%, 38.4%);
  font-family: "Kanit", cursive;
}

.topnav a {
  float: left;
  display: block;
  color: hsl(0, 0%, 94.9%);
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 1.06rem;
}

.topnav a:hover {
  background-color: hsl(356, 100%, 67.5%);
  color: black;
  border-radius: 7px;
}

.topnav-right {
  float: right;
}

.topnav .icon {
  display: none;
}

/*^ Top of page ^*/

#main {
  display: flex;
  align-items: center;
  justify-content: center;
  border-style: solid;
  border-width: 6px;
  height: auto;
  max-width: 70%;
  margin-left:auto;
  margin-right: auto;
  border-radius: 7px;
}

img {
  width: 100%;
  height: auto;
  text-align: center;
}

#text {
  font-family: 'Nabla', sans-serif;
  padding-left: 20px;
  font-size: 3.12rem;
  text-align: center;
}

#buttons {
  display: block;
  text-align: center;
}

#button1 {
  margin-right: 5px;
}

#button2 {
  margin-left: 5px;
}

.button {
  font-family: 'Kanit', cursive;
  padding: 5px 10px;
  background-color: hsl(0, 0%, 100%);
  border-radius: 7px;
  border: none;
  text-decoration: none;
}

/*v Bottom of Page v*/
#footer {
  display: block;
  margin-right: auto;
  margin-left: auto;
  text-align: center;
  width: 75%;
  font-size: 1rem;
  font-family: "Nabla", sans-serif;
  border: 3px solid hsl(210.7, 42.9%, 38.4%);
  border-radius: 7px;
  background-color: hsl(0, 0%, 0%);
}

@media screen and (max-width: 600px) {
  .topnav-right a:not(:first-child) {
    display: none;
  }

  .topnav-right a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive {
    position: relative;
  }

  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }

  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

@media screen and (max-width: 600px) {
  #time_box {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (max-width: 600px) {
  #main {
    display: block;
  }
  #text {
    text-align: center;
  }
  #buttons {
    display: block;
    text-align: center;
  }
}

